--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
+    "@types/styletron-engine-atomic": "^1.1.0",
+    "@types/styletron-react": "^5.0.2",
+    "@types/styletron-standard": "^2.0.0",
     "@types/twilio-video": "^2.0.10",
+    "baseui": "^9.72.0",
     "concurrently": "^5.1.0",
     "cross-env": "^7.0.2",
     "d3-timer": "^1.0.10",
@@ -32,30 +36,32 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "strip-color": "^0.1.0",
+    "styletron-engine-atomic": "^1.4.6",
+    "styletron-react": "^5.2.7",
     "twilio": "^3.39.3",
     "twilio-video": "^2.3.0",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
-    "mocha": "^6.2.2",
-    "react-test-renderer": "^16.12.0",
-    "start-server-and-test": "^1.10.8",
-    "ts-jest": "^24.3.0",
-    "puppeteer": "^2.1.1",
-    "mocha-junit-reporter": "^1.23.3",
-    "pixelmatch": "^5.1.0",
-    "isomorphic-fetch": "^2.2.1",
-    "jest-junit": "^9.0.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.4.0",
+    "@testing-library/react-hooks": "^3.2.1",
+    "@types/enzyme": "^3.10.4",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "cypress": "^3.8.3",
     "cypress-multi-reporters": "^1.2.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/react-hooks": "^3.2.1",
-    "@types/enzyme": "^3.10.4",
-    "@types/enzyme-adapter-react-16": "^1.0.5"
+    "isomorphic-fetch": "^2.2.1",
+    "jest-junit": "^9.0.0",
+    "mocha": "^6.2.2",
+    "mocha-junit-reporter": "^1.23.3",
+    "pixelmatch": "^5.1.0",
+    "puppeteer": "^2.1.1",
+    "react-test-renderer": "^16.12.0",
+    "start-server-and-test": "^1.10.8",
+    "ts-jest": "^24.3.0"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
@@ -64,8 +70,7 @@
     ]
   },
   "scripts": {
-    "start": "concurrently npm:server npm:dev",
-    "dev": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
     "eject": "react-scripts eject",
